tests/transpiler/x/swift/list_set_ops.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:2:15: error: expected ',' separator
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:15 GMT+7
2 | print(([1, 2] union [2, 3]))
  |               `- error: expected ',' separator
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:3:18: error: expected ',' separator
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:15 GMT+7
2 | print(([1, 2] union [2, 3]))
3 | print(([1, 2, 3] except [2]))
  |                  `- error: expected ',' separator
4 | print(([1, 2, 3] intersect [2, 4]))
5 | print((([1, 2] union [2, 3]).count))

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:4:18: error: expected ',' separator
2 | print(([1, 2] union [2, 3]))
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))
  |                  `- error: expected ',' separator
5 | print((([1, 2] union [2, 3]).count))
6 | 

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:5:16: error: expected ',' separator
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))
5 | print((([1, 2] union [2, 3]).count))
  |                `- error: expected ',' separator
6 | 

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:2:15: error: cannot find 'union' in scope
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:15 GMT+7
2 | print(([1, 2] union [2, 3]))
  |               `- error: cannot find 'union' in scope
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:3:18: error: cannot find 'except' in scope
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:15 GMT+7
2 | print(([1, 2] union [2, 3]))
3 | print(([1, 2, 3] except [2]))
  |                  `- error: cannot find 'except' in scope
4 | print(([1, 2, 3] intersect [2, 4]))
5 | print((([1, 2] union [2, 3]).count))

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:4:18: error: cannot find 'intersect' in scope
2 | print(([1, 2] union [2, 3]))
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))
  |                  `- error: cannot find 'intersect' in scope
5 | print((([1, 2] union [2, 3]).count))
6 | 

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:5:16: error: cannot find 'union' in scope
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))
5 | print((([1, 2] union [2, 3]).count))
  |                `- error: cannot find 'union' in scope
6 | 

/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/038/main.swift:5:30: error: value of tuple type '(Array<Int>, _)' has no member 'count'
3 | print(([1, 2, 3] except [2]))
4 | print(([1, 2, 3] intersect [2, 4]))
5 | print((([1, 2] union [2, 3]).count))
  |                              `- error: value of tuple type '(Array<Int>, _)' has no member 'count'
6 | 
