tests/transpiler/x/swift/list_set_ops.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:15 GMT+7
print(([1, 2] union [2, 3]))
print(([1, 2, 3] except [2]))
print(([1, 2, 3] intersect [2, 4]))
print((([1, 2] union [2, 3]).count))
